Fix Java 17 compatibility in tests